--- a/styles/Game/dragndrop.css
+++ b/styles/Game/dragndrop.css
@@ -60,3 +60,15 @@
     padding: 20px;
     margin: auto;
   }
+
+  .message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 100000000000000000;
+  }
